[project]
name = "super-resolution-api"
version = "0.1.0"
description = "REST API for super resolution"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dynaconf>=3.2.6",
    "fastapi>=0.115.6",
    "func-timeout>=4.3.5",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "numpy>=2.1.3",
    "onnxruntime>=1.20.1",
    "opencv-python>=4.10.0.84",
    "python-multipart>=0.0.19",
    "redis>=5.2.1",
    "uvicorn>=0.32.1",
    "uvloop>=0.21.0",
    "websockets>=14.1",
]

[dependency-groups]
dev = ["ruff>=0.8.2"]
